small fixes to use case order and removed non java 18 function call from map